# llm-eval-loop

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  config.ci-smoke.yaml  config.local-verify.yaml  config.yaml  pyproject.toml
.github/workflows/: ci.yml
blog/cuad100/20260711_cuad100-glm52-vs-sonnet5-20260711/: article_draft.ja.md  article_draft.md  conditions.md  tables.md
data/: golden.jsonl
data/sample/: golden.jsonl
docs/: APO_GUIDE.md  DESIGN.md  improvement-plan-batch-20260719.md  improvement-plan-gepa-cuad100.md
promptfoo/: promptfooconfig.yaml
prompts/base/: judge_rubric.txt
src/evalloop/: __init__.py  analyze.py  blog.py  build.py  calibrate.py  cli.py  compare.py  demos.py  diagnose.py  dspy_lm.py  optimize.py  optimize_cost.py  paths.py  preflight.py  report.py  run.py  schemas.py  sensitivity.py  stats.py  token_counting.py  variants.py
src/evalloop/asserts/: json_field_match.js  label_match.js
src/evalloop/optimizers/: __init__.py  base.py  copro.py  gepa.py  metrics.py  miprov2.py  schedulers.py  tapo.py
tasks/cuad100/: PROVENANCE.md  task.yaml
tasks/cuad100/optimized/: index.jsonl
tasks/cuad100/optimized/glm52/20260705-230558/: optimize_log.json  task.txt
tasks/cuad100/optimized/glm52/20260706-075752/: EXPERIMENT.md  optimize_log.json  task.txt
tasks/cuad100/optimized/glm52/20260706-093153/: EXPERIMENT.md  optimize_log.json  task.txt
tasks/cuad100/optimized/glm52/gepa-20260719-194302-light-n50/: optimize_log.json  task.txt
tasks/cuad100/prompts/: task.txt
tasks/cuad100/scripts/: build_golden.py  manifest.json
tasks/livedoor/: PROVENANCE.md  task.yaml
tasks/livedoor/prompts/: judge_rubric.txt  task.txt
tasks/sample-inquiry/: PROVENANCE.md  demos.jsonl  golden.jsonl  human_labels.jsonl  task.yaml
tasks/sample-inquiry/prompts/: judge_rubric.txt  task.txt
tests/: conftest.py  test_analyze.py  test_blog.py  test_build.py  test_build_demos.py  test_calibrate.py  test_cli_helpers.py  test_compare_multi.py  test_diagnose.py  test_generalization_gate.py  test_json_field_match.py  test_label_normalization.py  test_optimize.py  test_optimize_copro.py  test_optimize_miprov2.py  test_optimize_tapo.py  test_paths.py  test_preflight.py  test_promptfoo_output.py  test_report.py  test_run.py  test_schedulers.py  test_schemas.py  test_sensitivity.py  test_shipping_gate.py  test_stats.py  test_token_counting.py
tests/fixtures/: js_json_field_match_runner.js  js_label_match_verdict_runner.js  js_normalize_runner.js  json_field_match_cases.json  label_normalization_cases.json
(+2 files in other folders)
