[project]
name = "llm-eval-loop"
version = "0.1.0"
description = "Personal LLM evaluation harness: promptfoo runs+grades, Python (evalloop) owns dataset/split-safety, judge calibration, failure analysis, GEPA optimization, and blog export."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy>=2.5",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
evalloop = "evalloop.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evalloop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
