[project]
name = "llm-eval-loop"
version = "0.1.0"
description = "Personal LLM evaluation harness: promptfoo runs+grades, Python (evalloop) owns dataset/split-safety, judge calibration, failure analysis, GEPA optimization, and blog export."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Hideto Masuoka" },
]
keywords = ["llm", "evaluation", "evals", "promptfoo", "dspy", "gepa", "prompt-optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    # optimize.py は dspy 3.2 系の GEPA シグネチャ（metric kwargs / reflection_lm）
    # を前提とする。3.2.1 で動作検証済み。2.x では実行時に壊れるためフロアを 3.2 に固定
    "dspy>=3.2",
    "matplotlib>=3.9",
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.7",
]

[project.urls]
Homepage = "https://github.com/hidetomasuoka/llm-eval-loop"
Repository = "https://github.com/hidetomasuoka/llm-eval-loop"
Issues = "https://github.com/hidetomasuoka/llm-eval-loop/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
evalloop = "evalloop.cli:app"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evalloop"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# defaults (E4/E7/E9, F) plus import sorting
extend-select = ["I"]
